metadata-classic/objects/DisputeExperience__c.object
<CustomObject>
    <description>Custom object that will store the Solution Center dispute experience configuration records.</description>
    <fields>
        <fullName>ArchiveDate__c</fullName>
        <description>The date the Dispute Experience status was set to &quot;Archived.&quot;  Set via workflow.</description>
        <inlineHelpText>The date the Dispute Experience status was set to &quot;Archived.&quot;  Set via workflow.</inlineHelpText>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefaultExperience__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the record is used as the default dispute experience.</description>
        <inlineHelpText>Indicates if this dispute experience is the default experience for the Solution Center.</inlineHelpText>
        <label>Default Experience</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisputeType__c</fullName>
        <description>Picklist whose values indicate the type of dispute to help drive what the experience should be configured as.</description>
        <inlineHelpText>The type of dispute to help drive what the experience should be configured as.</inlineHelpText>
        <label>Dispute Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DisputeType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HCExperienceInitiator__c</fullName>
        <description>The help center experience that will be the default for the &quot;Get Help&quot; link on the Dispute Experience.</description>
        <inlineHelpText>The help center experience that will be the default for the &quot;Get Help&quot; link on the Dispute Experience.</inlineHelpText>
        <label>HC Experience Initiator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HCExperienceResponder__c</fullName>
        <description>Text area to store the string ID of the help center experience that should be used when the Solution Center &quot;Get Help&quot; link is clicked.</description>
        <inlineHelpText>Enter in the Salesforce 15 digit ID of the help center experience that should be used when the Solution Center &quot;Get Help&quot; link is clicked.</inlineHelpText>
        <label>HC Experience Responder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LabelsandInstructions__c</fullName>
        <description>This field contains all of the json for labels and instructions for Solution Center Dispute Experiences.</description>
        <inlineHelpText>Use this field to update labels and instructions based on this Solution Center Dispute Experience.</inlineHelpText>
        <label>Labels and Instructions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MaxDaysForCalendarPicker__c</fullName>
        <description>The max number of days allowed for the responder to select from a calendar picker.</description>
        <inlineHelpText>The max number of days allowed for the responder to select from a calendar picker.</inlineHelpText>
        <label>Max # of Days for Calendar Picker</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxFileSize__c</fullName>
        <description>The max file size allowed for image uploads.</description>
        <inlineHelpText>The max file size allowed for image uploads (in MB).</inlineHelpText>
        <label>Max File Size (in MB)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaysAllowedForDispute__c</fullName>
        <description>Number field to store the default setting for the max number of days allowed for the overall dispute.</description>
        <inlineHelpText>Enter in the overall max number of days the dispute experience should be allowed to be open/in progress for (e.g., 365 days).</inlineHelpText>
        <label>Max # of Days Allowed for Dispute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaysForInitiatorToConfirm__c</fullName>
        <description>The max number of days allowed for the initiator to confirm their dispute details.</description>
        <inlineHelpText>The max number of days allowed for the initiator to confirm their dispute details.</inlineHelpText>
        <label>Max # of Days for Initiator to Confirm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaysForInitiatorToReply__c</fullName>
        <description>The max number of days allowed for the initiator to reply to a message.</description>
        <inlineHelpText>The max number of days allowed for the initiator to reply to a message.</inlineHelpText>
        <label>Max # of Days for Initiator to Reply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaysForResponderFirstAction__c</fullName>
        <description>The max number of days allowed for the responder to take their first action (accept, counter, or ask a question).</description>
        <inlineHelpText>The max number of days allowed for the responder to take their first action (accept, counter, or ask a question).</inlineHelpText>
        <label>Max # of Days for Responder First Action</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaysForResponderToReply__c</fullName>
        <description>The max number of days allowed for the responder to reply to a message.</description>
        <inlineHelpText>The max number of days allowed for the responder to reply to a message.</inlineHelpText>
        <label>Max # of Days for Responder to Reply</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfDaystoAcceptOrCounterOffer__c</fullName>
        <description>The max number of days allowed for the offer to remain open.</description>
        <inlineHelpText>The max number of days allowed for the offer to remain open.</inlineHelpText>
        <label>Max # of Days to Accept or Counter Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfInitiatorMessagesAllowed__c</fullName>
        <description>The max number of related dispute messages allowed by the initiator.</description>
        <inlineHelpText>The max number of related dispute messages allowed by the initiator.</inlineHelpText>
        <label>Max # of Initiator Messages Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfInitiatorOffersAllowed__c</fullName>
        <description>The max number of dispute offers allowed by the initiator.</description>
        <inlineHelpText>The max number of dispute offers allowed by the initiator.</inlineHelpText>
        <label>Max # of Initiator Offers Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfResponderMessagesAllowed__c</fullName>
        <description>The max number of related dispute messages allowed by the responder..</description>
        <inlineHelpText>The max number of related dispute messages allowed by the responder..</inlineHelpText>
        <label>Max # of Responder Messages Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxOfResponderOffersAllowed__c</fullName>
        <description>The max number of related dispute offers allowed by the responder..</description>
        <inlineHelpText>The max number of related dispute offers allowed by the responder..</inlineHelpText>
        <label>Max # of Responder Offers Allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxofDaysforOffer__c</fullName>
        <description>This is the maximum number of days that an offer can be available.</description>
        <inlineHelpText>This is the maximum number of days that an offer can be available.</inlineHelpText>
        <label>Max # of Days for Offer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PublishDate__c</fullName>
        <description>The date the Dispute Experience status was set to &quot;Published.&quot; Set via workflow.</description>
        <inlineHelpText>The date the Dispute Experience status was set to &quot;Published.&quot; Set via workflow.</inlineHelpText>
        <label>Publish Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RecordNumber__c</fullName>
        <description>Auto-number field to display a record number; used for easy reference.</description>
        <displayFormat>SCC-{00000}</displayFormat>
        <inlineHelpText>Auto-number field to display a record number; used for easy reference.</inlineHelpText>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ResolutionOptions__c</fullName>
        <description>The available resolution options for an agent to select from when creating a dispute.  Used in lightning component.</description>
        <inlineHelpText>The available resolution options for an agent to select from when creating a dispute.</inlineHelpText>
        <label>Resolution Options (Agent facing)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete or redo the work</fullName>
                </value>
                <value>
                    <fullName>Complete or redo the work and refund</fullName>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Picklist whose values indicate the overall publication status of the Dispute Experience.</description>
        <inlineHelpText>Publication status of the dispute experience.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Needs approval</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Dispute Experience</label>
    <listViews>
        <fullName>AllDisputeExperiences</fullName>
        <columns>RecordNumber__c</columns>
        <columns>NAME</columns>
        <columns>DisputeType__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All Dispute Experiences</label>
        <sharedTo>
            <group>SolutionCenterAdminUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dispute Experiences</pluralLabel>
    <recordTypes>
        <fullName>DisputeExperience</fullName>
        <active>true</active>
        <description>Record type used to manage the solution center dispute default settings.</description>
        <label>Dispute Experience</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>